tests/paczka1/small_fuzzy/87595113.err
Error in line 4: p47 S982 20P9
Error in line 3: p47 S982 17,7
Error in line 6: p47 S232 63,4
